fix: :lipstick: Mobile nav menu now fades in and out
Also fixed the background dots so they're fixed and are on the root element and not the body so they cover the hole page.

Mobile nav menu button toggle will not close nav menu

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	background-image: radial-gradient(var(--dots), 1px, transparent 0);
+	background-position: -20px -20px;
+	background-attachment: fixed;
+	background-size: 40px 40px;
+}
+
 html,
 body {
 	margin: 0;
@@ -11,12 +18,6 @@ body {
 	box-sizing: border-box;
 	line-height: normal;
 	font-family: "Roboto", "sans-serif";
-}
-
-body {
-	background-image: radial-gradient(var(--dots), 1px, transparent 0);
-	background-size: 40px 40px;
-	background-position: -20px -20px;
 }
 
 @layer base {
